# HandmadeVideos

./: CMakeLists.txt  README.md  handmade.cpp  handmade.h  handmade_intrinsics.h  handmade_platform.h  main.cpp  win32_handmade.cpp  win32_handmade.h
cmake/: CompilerWarnings.cmake
